# prospector

./: .env.example  .gitignore  README.md  pyproject.toml
config/: config.yaml
data/exports/: leads_20260408_005021.csv
src/prospector/: __init__.py
src/prospector/cli/: dashboard.py  main.py  terminal.py
src/prospector/config/: settings.py
src/prospector/core/: scoring.py
src/prospector/db/: database.py
src/prospector/enrichment/: enricher.py
src/prospector/export/: exporter.py
src/prospector/models/: lead.py
src/prospector/outreach/: outreach.py  whatsapp.py
src/prospector/scrapers/: google_places.py  maps_scraper.py
templates/: email_first_contact.html
