[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "imotio-prospector"
version = "1.0.0"
description = "Sistema profissional de prospecção de leads para estúdios criativos"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "iMotio", email = "contato@imotio.com.br" }]
keywords = ["prospecting", "leads", "studios", "sales", "automation"]

dependencies = [
    "typer>=0.12",
    "rich>=13",
    "httpx>=0.27",
    "aiohttp>=3.9",
    "playwright>=1.44",
    "beautifulsoup4>=4.12",
    "lxml>=5.2",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "sqlalchemy>=2.0",
    "aiosqlite>=0.20",
    "greenlet>=3.0",
    "pandas>=2.2",
    "openpyxl>=3.1",
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
    "streamlit>=1.37",
    "folium>=0.17",
    "streamlit-folium>=0.21",
    "plotly>=5.22",
    "tenacity>=8.4",
    "loguru>=0.7",
    "geopy>=2.4",
    "groq>=0.9",
    "schedule>=1.2",
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio>=0.23", "ruff>=0.5", "mypy>=1.10"]

[project.scripts]
prospector = "prospector.cli.main:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
